--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "nprdm/silverstripe-syntaxhighlight",
-    "description": "Mashup of tiny mce syntax-highlighted code entry, and front-end syntax highlighting via javascript syntaxhighlighter library, for SilverStripe CMS.",
+    "name": "souldigital/silverstripe-syntaxhighlight",
+    "description": "Mashup of tiny mce syntax-highlighted code entry, and front-end syntax highlighting via javascript syntaxhighlighter library, for SilverStripe CMS. Added YAML highlighting.",
     "type": "silverstripe-module",
     "keywords": ["silverstripe", "syntax","highlight","code","cms","content"],
     "license" : "BSD2",
@@ -12,6 +12,10 @@
         {
           "name": "Nara Kasbergen",
           "email": "BKasbergen@npr.org"
+        },
+        {
+          "name": "Tim Larsen",
+          "email": "tim@souldigital.com.au"
         }
     ],
     "require":
